--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
         <!-- Navigation -->
         <nav class="navbar">
             <div class="nav-container">
-                <a href="#home" class="logo logo-profile">
-    <img src="assets/logo.png" alt="Fuad Hasan" class="logo-image">
-    <span class="logo-name">Fuad Hasan</span>
-</a>       
-                
+                <a href="#" class="logo">
+    <div class="logo-box">
+        <img src="logo.png" alt="Fuad Hasan Logo">
+        <span id="typing-text"></span>
+    </div>
+</a>               
                 <div class="nav-menu">
                     <a href="#home" class="nav-link active" data-nav="home">Home</a>
                     <a href="#about" class="nav-link" data-nav="about">About</a>
