--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
         <div class="logo-circle">
             <img src="logo.png" alt="Fuad Hasan">
         </div>
-</a>         
+        <span id="typing-name"></span>
+    </div>
+</a>
+     
                 <div class="nav-menu">
                     <a href="#home" class="nav-link active" data-nav="home">Home</a>
                     <a href="#about" class="nav-link" data-nav="about">About</a>
